k8s/c1/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: bank-of-anthos
  labels:
    app: frontend
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: frontend
          image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/frontend:v0.6.8
          ports:
            - name: http
              containerPort: 8085
          readinessProbe:
            httpGet:
              path: /ready
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /ready
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: publickey
              mountPath: /tmp/.ssh
              readOnly: true
      volumes:
        - name: publickey
          secret:
            secretName: jwt-key
            items:
              - key: jwtRS256.key.pub
                path: publickey
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: bank-of-anthos
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8085
